package zoeque.limitchecker.domain.entity.valueobject;

import jakarta.persistence.Embeddable;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import lombok.AccessLevel;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import zoeque.limitchecker.domain.entity.StoredItem;

/**
 * Identifier for {@link StoredItem}.
 * This identifier is generated by Spring JPA.
 */
@Getter
@Setter(AccessLevel.PROTECTED)
@NoArgsConstructor
@Embeddable
public class StoredItemIdentifier {
  long identifier;
}
