@startuml
package StoredItemAggregatePattern {
  class StoredItem{
    StoredItemIdentifier identifier
    ItemDetail itemDetail
    AlertStatusFlag alertStatusFlag
    + changeItemStatus(AlertStatusFlag)
  }
  class StoredItemIdentifier {
    String identifier
  }
  class ItemDetail {
    ItemType itemType
    ItemName itemName
    ExpirationDate expirationDate
  }

  class ItemType {
    ItemTypeModel itemTypeModel
    AlertDefinition alertDefinition
  }
  enum ItemTypeModel {
  }

  class AlertDefinition {
    Integer expirationDate
  }
  class ItemName {
    String itemName
  }
  class ExpirationDate {
    LocalDateTime expirationDate
  }
}
StoredItem o-- StoredItemIdentifier
StoredItem o-- ItemDetail
ItemDetail o-- ItemName
ItemDetail o-- ItemType
ItemDetail o-- ExpirationDate
ItemType o-- AlertDefinition
ItemType --> ItemTypeModel

@enduml